Project board changed to ESP12-E. Added WiFi

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = nanoatmega328
+[env:esp12e]
+platform = espressif8266
+board = esp12e
 framework = arduino
 lib_deps =
+  ESP8266WiFi
   DS1307
   DHT
